Adding api for running all tests files under specific folder
